--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "my-app-1",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://BuzzBridge.github.io/BuzzElevate",
